--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,25 @@ services:
       - ./:/app
     ports:
       - 3000:3000
+  
+  mongo:
+    image: mongo
+    container_name: mongodb
+    volumes:
+      - ./db:/data/db
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: mongodbserver
+      MONGO_INITDB_DATABASE: tindev
+  
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: mongodbserver
+      ME_CONFIG_MONGODB_SERVER: mongo
 
