--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
     volumes:
       - ./:/app
     ports:
-      - 3000:3000
+      - 8000:8000
+    depends_on:
+      - mongo
   
   mongo:
     image: mongo
@@ -17,12 +19,11 @@ services:
       - ./db:/data/db
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: mongodbserver
       MONGO_INITDB_DATABASE: tindev
   
   mongo-express:
     image: mongo-express
+    container_name: mongo-express
     restart: always
     ports:
       - 8081:8081
