--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,17 @@ services:
     environment:
       MONGO_INITDB_DATABASE: tindev
   
+  mongotest:
+    image: mongo
+    container_name: mongodbtest
+    volumes:
+      - ./dbtest:/data/db
+    restart: always
+    ports:
+      - 27017:27027
+    environment:
+      MONGO_INITDB_DATABASE: tindev
+  
   mongo-express:
     image: mongo-express
     container_name: mongo-express
@@ -30,5 +41,5 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: mongodbserver
-      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_SERVER: mongotest
 
