--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js"
+    "test": "jest",
+    "start": "nodemon src/server.js --ignore test"
   },
   "author": "fariasgustavo",
   "license": "ISC",
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.9",
     "nodemon": "^1.19.1"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
