--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - 8000:8000
     depends_on:
       - mongo
+      - mongotest
   
   mongo:
     image: mongo
@@ -18,6 +19,8 @@ services:
     volumes:
       - ./db:/data/db
     restart: always
+    ports:
+      - 27017:27017
     environment:
       MONGO_INITDB_DATABASE: tindev
   
@@ -28,7 +31,7 @@ services:
       - ./dbtest:/data/db
     restart: always
     ports:
-      - 27017:27027
+      - 27017:7070
     environment:
       MONGO_INITDB_DATABASE: tindev
   
@@ -41,5 +44,5 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: mongodbserver
-      ME_CONFIG_MONGODB_SERVER: mongotest
+      ME_CONFIG_MONGODB_SERVER: mongo
 
