--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "ENVIRONMENT=test jest",
     "start": "nodemon src/server.js --ignore test"
   },
   "author": "fariasgustavo",
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.9",
     "nodemon": "^1.19.1"
