Other application container added only for tests and axios configuration

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "ENVIRONMENT=test jest",
+    "test": "jest --detectOpenHandles",
     "start": "nodemon src/server.js --ignore test"
   },
   "author": "fariasgustavo",
