--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,7 @@
 version: "3"
 
 services:
-  app:
-    build: .
-    container_name: nodejs
-    command: npm start
-    volumes:
-      - ./:/app
-    ports:
-      - 8000:8000
-    depends_on:
-      - mongo
-      - mongotest
-  
+
   mongo:
     image: mongo
     container_name: mongodb
@@ -27,13 +16,38 @@ services:
   mongotest:
     image: mongo
     container_name: mongodbtest
+    command: mongod --port 27018
     volumes:
       - ./dbtest:/data/db
     restart: always
     ports:
-      - 27017:7070
+      - 27018:27018
     environment:
       MONGO_INITDB_DATABASE: tindev
+
+  app:
+    build: .
+    container_name: nodejs
+    command: npm start
+    volumes:
+      - ./:/app
+    ports:
+      - 8000:8000
+    depends_on:
+      - mongo
+  
+  apptest:
+    build: .
+    environment:
+      - ENVIRONMENT=test
+    container_name: nodejstest
+    command: npm start
+    volumes:
+      - ./:/app
+    ports:
+      - 7000:7000
+    depends_on:
+      - mongotest
   
   mongo-express:
     image: mongo-express
@@ -44,5 +58,8 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: mongodbserver
-      ME_CONFIG_MONGODB_SERVER: mongo
-
+      ME_CONFIG_MONGODB_SERVER: mongotest
+      ME_CONFIG_MONGODB_PORT: 27018
+    depends_on:
+      - mongo
+      - mongotest
